[package]
name = "implicit-await"
version = "0.1.0"
authors = ["Drake Tetreault <ekardnt@ekardnt.com>"]
edition = "2018"
license = "CC0-1.0"
homepage = "https://github.com/EkardNT/implicit-await"
repository = "https://github.com/EkardNT/implicit-await"
readme = "README.md"
keywords = ["async", "await", "implicit"]
categories = ["asynchronous", "concurrency", "no-std"]

[dependencies.implicit-await-macro]
path = "../implicit-await-macro"
version = "0.1.0"

[dev-dependencies.futures-preview]
version = "0.3.0-alpha.16"
features = ["nightly", "async-await"]

[features]
default = ["std"]
# Rust standard library support.
std = []